feat(mobile): cashier POS foundation — T1–T12 (auth, home, session, sell data layer, UI screens)
Complete mobile POS foundation on tchalanet-mobile + cashier server features.

Mobile:
- PKCE auth (flutter_appauth), JWT decode, secure token storage, route guards
- i18n runtime (two-endpoint merge, backend wins), theme runtime (CSS tokens)
- Login page: responsive phone/POS terminal, public draw results + next countdown
- Cashier home (3 server-driven states: setup / closed session / operational)
- Op context setup: GET /options picker, OpContextStorage, OpContextInterceptor (X-Tch-* headers)
- Session open: large HTG input, quick chips, DÉMARRER LA SESSION
- Post-sell success: large ticket code, bento actions, NOUVEAU TICKET
- Ticket detail: receipt card, entries, share/print/cancel
- Sell/verify data layer: CashierTicketService (preview, sell, verify, print, send)
- Bottom nav: Ventes | Historique | Scanner | Profil
- Design system: StatCard, PosActionButton, OnlineBadge, ScreenSize

Server (tchalanet-features):
- GET /tenant/cashier/operational-context/options (filtered outlets+terminals per role)
- CashierHomeService: trust gate relaxed to outlet+terminal presence for OPEN_SESSION state